--- a/app/src/main/res/layout/activity_rss_items.xml
+++ b/app/src/main/res/layout/activity_rss_items.xml
@@ -1,4 +1,4 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="match_parent"
@@ -7,5 +7,4 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity"
-    tools:ignore="MergeRootFrame" />
+    tools:context="com.cleancoder.interviews.rssreader.RssItemsActivity" />
